Add Search Handler
