# src/web/docs/swagger.yaml
@@ -1,5 +1,31 @@
 basePath: /go-popular/v1
 definitions:
+  dbmodels.Repository:
+    properties:
+      createdTimestampUTC:
+        type: string
+      description:
+        type: string
+      forks:
+        type: integer
+      full_name:
+        type: string
+      homepage:
+        type: string
+      html_url:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      size:
+        description: Language string `json:"language,omitempty" bson:"language,omitempty"`
+        type: integer
+      updatedTimestampUTC:
+        type: string
+      watchers:
+        type: integer
+    type: object
   errorinterface.ErrorResponse:
     properties:
       code:
@@ -67,7 +93,8 @@ definitions:
     type: object
 host: localhost:8001
 info:
-  contact: {}
+  contact:
+    name: API Support
   description: Go Popular API Documentation
   license:
     name: Apache 2.0
@@ -102,4 +129,44 @@ paths:
       summary: Get health of the service
       tags:
       - health
+  /repository/search:
+    get:
+      consumes:
+      - application/json
+      description: It allows to search repositories
+      parameters:
+      - description: search query
+        in: query
+        name: q
+        required: true
+        type: string
+      - description: response limit default is 10
+        in: query
+        name: limit
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dbmodels.Repository'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errorinterface.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errorinterface.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errorinterface.ErrorResponse'
+      summary: Search repositories
+      tags:
+      - jobs
 swagger: "2.0"
